# lldap-controller

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  Dockerfile  authelia.yaml
.gitea/workflows/: build.yaml
manifests/: cluster-role-binding.yaml  cluster-role.yaml  deployment.yaml  kustomization.yaml  service-account.yaml
queries/: Cargo.toml  build.rs
queries/schemas/: lldap.graphql
queries/src/: lib.rs
queries/src/snapshots/: queries__tests__add_user_to_group_gql_output.snap  queries__tests__create_group_gql_output.snap  queries__tests__create_managed_user_attribute_gql_output.snap  queries__tests__create_user_gql_output.snap  queries__tests__delete_group_gql_output.snap  queries__tests__delete_user_gql_output.snap  queries__tests__get_groups_gql_output.snap  queries__tests__get_user_attributes_gql_output.snap  queries__tests__get_user_gql_output.snap  queries__tests__list_managed_users_gql_output.snap  queries__tests__list_users_gql_output.snap  queries__tests__remove_user_from_group_gql_output.snap
src/: context.rs  error.rs  lib.rs  lldap.rs  main.rs  resources.rs
src/resources/: group.rs  mod.rs  service_user.rs
src/snapshots/: lldap_controller__resources__tests__service_user_crd_output.snap
yaml/: group.yaml  service-user.yaml
