[package]
name = "lldap-controller"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["queries"]

[workspace.dependencies]
cynic = "3.10.0"
insta = "1.42.2"

[dependencies]
queries = { path = "./queries" }
anyhow = "1.0.97"
lldap_auth = "0.3.0"
rand = { version = "0.8.0" }
serde_json = "1.0.140"
surf = "2.3.2"
cynic = { workspace = true, features = ["http-surf"] }
tokio = { version = "1.44.0", features = ["full"] }

[dev-dependencies]
insta = { workspace = true }
