[package]
name = "lldap-controller"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["queries"]

[workspace.dependencies]
cynic = "3.10.0"
insta = { version = "1.42.2", features = ["yaml"] }

[dependencies]
queries = { path = "./queries" }
anyhow = "1.0.97"
lldap_auth = { git = "https://github.com/lldap/lldap" }
rand = { version = "0.8.0" }
serde_json = "1.0.140"
surf = "2.3.2"
cynic = { workspace = true, features = ["http-surf"] }
tokio = { version = "1.44.0", features = ["full"] }
kube = { version = "0.99.0", features = ["derive"] }
k8s-openapi = { version = "0.24.0", features = ["v1_31"] }
schemars = "0.8.22"
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = "0.9.34"

[dev-dependencies]
insta = { workspace = true }
