[package]
name = "lldap-controller"
version = "0.1.0"
edition = "2021"
default-run = "lldap-controller"

[workspace]
members = ["queries"]

[workspace.dependencies]
cynic = "3.10.0"
insta = { version = "1.42.2", features = ["yaml"] }

[dependencies]
queries = { path = "./queries" }
anyhow = "1.0.97"
lldap_auth = { git = "https://github.com/lldap/lldap" }
rand = { version = "0.8.0" }
serde_json = "1.0.140"
cynic = { workspace = true, features = ["http-reqwest"] }
tokio = { version = "1.44.0", features = ["full"] }
kube = { version = "0.99.0", features = ["derive", "runtime"] }
k8s-openapi = { version = "0.24.0", features = ["v1_31"] }
schemars = { version = "0.8.22", features = ["chrono"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = "0.9.34"
futures = "0.3.31"
tracing-subscriber = { version = "0.3.19", features = ["json", "env-filter"] }
tracing = "0.1.41"
thiserror = "2.0.12"
chrono = "0.4.40"
passwords = "3.1.16"
async-trait = "0.1.88"
reqwest = "0.12.14"

[dev-dependencies]
insta = { workspace = true }
